2002-03-15  Yuuichi Teranishi  <teranisi@gohome.org>

	* w3m-form.el (w3m-form-mee-select-value): New function.
	(w3m-form-parse-and-fontify)[w3mmee]: Set select value.

	* w3m.el (w3m-halfdump-command-arguments)[w3mmee]: Added image.

	* w3m-form.el (w3m-form-parse-and-fontify): Set the value of form 
	only if the method is not internal;
	Add internal form to the w3m-current-forms;
	Treat input type `image' as same as `submit'.
	(w3m-form-mee-attr-unquote): New function.
	(w3m-string-to-char-list): New function/alias.
	(w3m-form-mee-new): New function.
	(w3m-form-parse-and-fontify): Parse w3mmee's form info.
	(w3m-form-input-textarea-keymap): Bind C-g.
	(w3m-form-input-select-keymap): Bind C-g, h,j,k,l.
	(w3m-form-input-map-keymap): Ditto.
	(w3m-form-parse-and-fontify): Set textarea value.

2002-03-13  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m-form.el (w3m-form-resume): Typo.

2002-03-13  Yuuichi Teranishi  <teranisi@gohome.org>

	* w3m.el (toplevel): Removed autoload setting for
	`w3m-form-parse-buffer'.
	(w3m-clear-local-variables): Don't treat w3m-current-forms any more.
	(w3m-copy-local-variables): Ditto.
	(w3m-additional-command-arguments): Fixed problem when no-proxy host
	has port number other than 80.
	(w3m-rendering-buffer-1): Don't call w3m-form-parse-buffer.
	(w3m-goto-url): Setup w3m-current-forms from history structure.

	* w3m-form.el (w3m-form-parse-buffer): Abolish.
	(w3m-form-parse-forms): Ditto.
	(w3m-form-resume): Set value of `w3m-current-forms'.
	(w3m-fontify-forms): Call `w3m-form-parse-and-fontify' instead of
	`w3m-form-fontify'.
	(w3m-form-parse-and-fontify): New function.
	(w3m-form-input-select): Fix problem when candidate label is "".

2002-03-13  Katsumi Yamaoka  <yamaoka@jpl.org>
	Suggested by HAYASHI Chifumi <chifumi@mscom.or.jp>.

	* w3m-form.el (w3m-form-new): Ignore the 2nd arg `action' if it is
	nil.
	(w3m-form-parse-forms): Don't parse the value of `w3m-current-url'
	if it is nil.
